; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_crypto_wolfssl.c_crypto_bignum_deinit.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_crypto_wolfssl.c_crypto_bignum_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_bignum = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @crypto_bignum_deinit(%struct.crypto_bignum* %0, i32 %1) #0 {
  %3 = alloca %struct.crypto_bignum*, align 8
  %4 = alloca i32, align 4
  store %struct.crypto_bignum* %0, %struct.crypto_bignum** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.crypto_bignum*, %struct.crypto_bignum** %3, align 8
  %6 = icmp ne %struct.crypto_bignum* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %2
  br label %22

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %8
  %12 = load %struct.crypto_bignum*, %struct.crypto_bignum** %3, align 8
  %13 = bitcast %struct.crypto_bignum* %12 to i32*
  %14 = call i32 @mp_forcezero(i32* %13)
  br label %15

15:                                               ; preds = %11, %8
  %16 = load %struct.crypto_bignum*, %struct.crypto_bignum** %3, align 8
  %17 = bitcast %struct.crypto_bignum* %16 to i32*
  %18 = call i32 @mp_clear(i32* %17)
  %19 = load %struct.crypto_bignum*, %struct.crypto_bignum** %3, align 8
  %20 = bitcast %struct.crypto_bignum* %19 to i32*
  %21 = call i32 @os_free(i32* %20)
  br label %22

22:                                               ; preds = %15, %7
  ret void
}

declare dso_local i32 @mp_forcezero(i32*) #1

declare dso_local i32 @mp_clear(i32*) #1

declare dso_local i32 @os_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
